[*] set up toothpick library, gradle updated

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -24,6 +26,11 @@ android {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
+    kapt {
+        arguments {
+            arg("toothpick_registry_package_name", "course.intermediate.notes")
+        }
+    }
 }
 
 dependencies {
@@ -41,4 +48,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    // Toothpick - Dependency Injection
+    implementation 'com.github.stephanenicolas.toothpick:toothpick-runtime:1.1.3'
+    implementation 'com.github.stephanenicolas.toothpick:smoothie:1.1.3'
+    kapt 'com.github.stephanenicolas.toothpick:toothpick-compiler:1.1.3'
+    testImplementation 'com.github.stephanenicolas.toothpick:toothpick-testing:1.1.3'
 }
